--- a/notebooks/Chapter01.01-What-is-Machine-Learning.ipynb
+++ b/notebooks/Chapter01.01-What-is-Machine-Learning.ipynb
@@ -4,7 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What is Machine Learning"
+    "# 1.1 What is Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello World!')"
    ]
   },
   {
