--- a/notebooks/Chapter01.01-What-is-Machine-Learning.ipynb
+++ b/notebooks/Chapter01.01-What-is-Machine-Learning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.1 What is Machine Learning"
+    "# What is Machine Learning"
    ]
   },
   {
@@ -22,6 +22,19 @@
    ],
    "source": [
     "print('Hello World!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definition of Machine Learning\n",
+    "\n",
+    "### Formal Definition\n",
+    "\n",
+    "### Information Definition\n",
+    "\n",
+    "## Why Machine Learning"
    ]
   },
   {
